# ml-data-assimilation

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODOS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
configs/: README.md  main.yaml
configs/data/: default_data.yaml  main_data.yaml
configs/data/core/: default_data_core.yaml
configs/data/dynamical_models/: default_dynamical_model.yaml
configs/data/generator/: default_generator.yaml
configs/data/observers/: default_observer.yaml
configs/data/systems/: Lorenz96.yaml  lorenz96.yaml
configs/evaluation/: default_evaluation.yaml
configs/models/: default_model.yaml  run_model.yaml
configs/models/da/: 4dvar.yaml  enskf.yaml  persistence.yaml  persistence_ensemble.yaml  var4d.yaml
configs/models/ml/: neuralEnsKF.yaml  neural_enkf.yaml
configs/your_experiments/: template.yaml
docs/: README.md
notebooks/: README.md
output/results-19Apr2026/Dataset-000_SEED-42_TIME-1000_SYSTEM-Lorenz96-5_MODEL-40-normal-0.1-normal-0.01_OBS-0.9-normal-0.1/: NeuralEnKF.pkl  Var4D.pkl
resources/initial_states/: lorenz96_dim-36_delta-05_timesteps-14400.json
scripts/: 00-single-neuralenkf.sh  01-jobs-persistence.sh  02-jobs-persistence-ensemble-1.sh  03-jobs-persistence-ensemble-2.sh  04-jobs-persistence-ensemble-3.sh  05-jobs-persistence-ensemble-4.sh  06-jobs-var4d-1.sh  07-jobs-var4d-2.sh  08-jobs-var4d-3.sh  09-jobs-var4d-4.sh  10-jobs-var4d-5.sh  11-jobs-var4d-6.sh  12-jobs-var4d-7.sh  13-jobs-var4d-8.sh  14-jobs-enkf-1.sh  15-jobs-enkf-2.sh  16-jobs-enkf-3.sh  17-jobs-enkf-4.sh  18-jobs-missing-persistence.sh  19-jobs-missing-var4d.sh  20-jobs-missing-enkf.sh  21-jobs-missing-persistence-ensemble.sh  README.md  auto_project_init_script.py  config.sh.example  persistence_jobs.sh  single_job.sbatch  submit_all_neuralenkfs.sh  submit_to_grid.sh
src/: README.md  __init__.py
src/ml_da/: __init__.py  cli.py  orchestrator.py
(+448 files in other folders)
