[project]
name = "ml_da"
version = "0.0.0"
description = "Benchmarking Traditional and ML Methods for Data Assimilation"
authors = [{ name = "Julia Kaltenborn", email = "julia.kaltenborn@mail.mcgill.ca" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "pre-commit>=4.5.1",
    "dabench@git+https://github.com/StevePny/DataAssimBench.git",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "qgs>=1.0.0",
    "zarr<3",
    "xarray>=2024.11.0",
]

[dependency-groups]
dev = []

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_da"]

#
# Scripts
#
[project.scripts]

#
# Tools
#

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
ignore-init-module-imports = true
remove-unused-variables = true
recursive = true

[tool.autopep8]
max_line_length = 120
in-place = true
aggressive = 2
ignore = ["W503", "E203", "E501"]
recursive = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
docstring-convention = "google"
max-complexity = 20
per-file-ignores = [
    "src/ml_da/data/generators/__init__.py:F401",
    "src/ml_da/data/generate.py:F401"
]
exclude = [
    ".git",
    "migrations",
    "__pycache__"
]

[tool.pylint]
disable = "C0114,C0115,C0116,R0903,R1710,W1203"
max-line-length = 120
max-locals = 20
max-args = 16
max-positional-arguments = 16
max-attributes = 20

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.flynt]
line-length = 120
transform-concats = true
verbose = true

[tool.docformatter]
style = "google"
pre-summary-newline = true
wrap-descriptions = 120
wrap-summaries = 120
blank = false
exclude = []
recursive = true

[tool.hatch.metadata]
allow-direct-references = true
